[package]
name = "network-hub-rs"
version = "0.1.0"
edition = "2021"
authors = ["Anthropic Claude"]
description = "Secure, distributed hub-and-spoke communication system with encrypted messaging"

[dependencies]
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full", "test-util"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
dashmap = "5.4"
futures = "0.3"
async-trait = "0.1"

[lib]
name = "network_hub"
path = "src/lib.rs"

[[bin]]
name = "network-hub"
path = "src/bin/network_hub.rs"

[[bin]]
name = "reverse-proxy"
path = "src/bin/reverse_proxy.rs"

[[bin]]
name = "hub-demo"
path = "src/bin/hub_demo.rs"

[[bin]]
name = "thread-hub-demo"
path = "src/bin/thread_hub_demo.rs"